Get EncConverters unit tests to pass on Windows
This involved:
- adding required CallingConvention = CallingConvention.Cdecl in many places
where C# is declaring how to call methods built with the C calling convention.
- making the test DLL be put in the same directory as the DLLs being tested.
- Setting the input and output code page for various tests appropriately
- fixing a problem with the use of DeveloperPluginDir registry setting
for locating the Plugins folder while testing

I also added the beginnings of a ReadMe file.

--- a/.hgignore
+++ b/.hgignore
@@ -17,6 +17,12 @@ Release
 .user
 .ncb
 .suo
+_ReSharper*/
+*.sdf
+*.opensdf
+*.ipch
+From1252.pyc
+To1252.pyc
 
 src/TestEncCnvtrs/test-results/*
 All*Files.lst
