--- a/src/IcuEC/IcuEC 2010.csproj
+++ b/src/IcuEC/IcuEC 2010.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -37,7 +37,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\output\debug\</OutputPath>
+    <OutputPath>..\..\output\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -49,7 +49,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\output\release\</OutputPath>
+    <OutputPath>..\..\output\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -129,10 +129,13 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <PropertyGroup>
-    <PostBuildEvent>copy D:\icu48\bin\icuuc48.dll $(OutDir)
-copy D:\icu48\bin\icuin48.dll $(OutDir)
-copy D:\icu48\bin\icudt48.dll $(OutDir)
-</PostBuildEvent>
-  </PropertyGroup>
+	<ItemGroup>
+		<IcuFilesToCopy Include="D:\icu48\bin\icuuc48.dll" Condition="'$(OS)'=='Windows_NT'"/>
+		<IcuFilesToCopy Include="D:\icu48\bin\icuin48.dll" Condition="'$(OS)'=='Windows_NT'"/>
+		<IcuFilesToCopy Include="D:\icu48\bin\icudt48.dll" Condition="'$(OS)'=='Windows_NT'"/>
+	</ItemGroup>
+	<Target Name="AfterBuild">
+		<Copy SourceFiles="@(IcuFilesToCopy)" DestinationFolder="$(OutDir)"
+			  ContinueOnError="true" Condition="'$(OS)'=='Windows_NT'"/>
+	</Target>
 </Project>
