--- a/src/SilIndicEncConverters/SilIndicEncConverters 2010.csproj
+++ b/src/SilIndicEncConverters/SilIndicEncConverters 2010.csproj
@@ -78,10 +78,12 @@
     <Reference Include="ECInterfaces, Version=4.0.0.0, Culture=neutral, PublicKeyToken=f1447bae1e63f485, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\release\ECInterfaces.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="SilEncConverters40, Version=4.0.0.0, Culture=neutral, PublicKeyToken=f1447bae1e63f485, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\release\SilEncConverters40.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System">
       <Name>System</Name>
