--- a/src/AppDataMover/AppDataMover.csproj
+++ b/src/AppDataMover/AppDataMover.csproj
@@ -60,9 +60,11 @@
   <ItemGroup>
     <Reference Include="ECInterfaces">
       <HintPath>..\..\output\release\ECInterfaces.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="SilEncConverters40">
       <HintPath>..\..\output\release\SilEncConverters40.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
