--- a/src/PyScriptEC/Makefile.in
+++ b/src/PyScriptEC/Makefile.in
@@ -1,5 +1,7 @@
 # Master Makefile for the PyScriptEC converter library
 # Makefile.in created January 20, 2012 by Stephen McConnel
+#
+# 06-Jun-13 JDK  Remove library version numbers.
 
 VPATH       = @srcdir@
 CXX         = @CXX@
@@ -21,19 +23,16 @@ ECHEADER=$(ECHEADERDIR)/CEncConverter.h
 
 LIBDIR = $(exec_prefix)/lib/encConverters
 
-all: $(BUILDDIR) $(OUTDIR)/libPyScriptEncConverter.so.1.0
+all: $(BUILDDIR) $(OUTDIR)/libPyScriptEncConverter.so
 
 $(BUILDDIR):
 	mkdir -p $(BUILDDIR)
 	mkdir -p $(OUTDIR)
 
-$(OUTDIR)/libPyScriptEncConverter.so.1.0: $(BUILDDIR)/PyScriptEncConverter.o $(OUTDIR)/PyScriptEC.dll.config
-	g++ -shared -Wl,-soname,libPyScriptEncConverter.so.1 \
-  -o $(OUTDIR)/libPyScriptEncConverter.so.1.0 \
+$(OUTDIR)/libPyScriptEncConverter.so: $(BUILDDIR)/PyScriptEncConverter.o $(OUTDIR)/PyScriptEC.dll.config
+	g++ -shared -Wl,-soname,libPyScriptEncConverter.so \
+  -o $(OUTDIR)/libPyScriptEncConverter.so \
   $(BUILDDIR)/PyScriptEncConverter.o $(PYTHON_LDFLAGS)
-	rm -f $(OUTDIR)/libPyScriptEncConverter.so $(OUTDIR)/libPyScriptEncConverter.so.1
-	ln -s libPyScriptEncConverter.so.1.0 $(OUTDIR)/libPyScriptEncConverter.so.1
-	ln -s libPyScriptEncConverter.so.1.0 $(OUTDIR)/libPyScriptEncConverter.so
 
 $(BUILDDIR)/PyScriptEncConverter.o: PyScriptEncConverter.cpp PyScriptEncConverter.h $(ECHEADER)
 	g++ -Wall -fPIC -c PyScriptEncConverter.cpp \
@@ -43,21 +42,17 @@ $(BUILDDIR)/PyScriptEncConverter.o: PyScriptEncConverter.cpp PyScriptEncConverte
 $(OUTDIR)/PyScriptEC.dll.config: PyScriptEC.dll.config
 	cp PyScriptEC.dll.config $(OUTDIR)
 
-release: $(RELEASEBLD) $(RELEASEOUT)/libPyScriptEncConverter.so.1.0
+release: $(RELEASEBLD) $(RELEASEOUT)/libPyScriptEncConverter.so
 
 $(RELEASEBLD):
 	mkdir -p $(RELEASEBLD)
 	mkdir -p $(RELEASEOUT)
 
-$(RELEASEOUT)/libPyScriptEncConverter.so.1.0: \
+$(RELEASEOUT)/libPyScriptEncConverter.so: \
   $(RELEASEBLD)/PyScriptEncConverter.o $(RELEASEOUT)/PyScriptEC.dll.config
-	g++ -shared -Wl,-soname,libPyScriptEncConverter.so.1 \
-  -o $(RELEASEOUT)/libPyScriptEncConverter.so.1.0 \
+	g++ -shared -Wl,-soname,libPyScriptEncConverter.so \
+  -o $(RELEASEOUT)/libPyScriptEncConverter.so \
   $(RELEASEBLD)/PyScriptEncConverter.o $(PYTHON_LDFLAGS)
-	rm -f $(RELEASEOUT)/libPyScriptEncConverter.so
-	rm -f $(RELEASEOUT)/libPyScriptEncConverter.so.1
-	ln -s libPyScriptEncConverter.so.1.0 $(RELEASEOUT)/libPyScriptEncConverter.so.1
-	ln -s libPyScriptEncConverter.so.1.0 $(RELEASEOUT)/libPyScriptEncConverter.so
 
 $(RELEASEBLD)/PyScriptEncConverter.o: PyScriptEncConverter.cpp \
   PyScriptEncConverter.h $(ECHEADER)
@@ -80,7 +75,7 @@ distclean: clean
 
 install: release PyScriptEC.dll.config
 	mkdir -p $(DESTDIR)$(LIBDIR)
-	$(INSTALL) -s $(RELEASEOUT)/libPyScriptEncConverter.so.1.0 $(DESTDIR)$(LIBDIR)
+	$(INSTALL) -s $(RELEASEOUT)/libPyScriptEncConverter.so $(DESTDIR)$(LIBDIR)
 	$(INSTALL) PyScriptEC.dll.config $(DESTDIR)$(LIBDIR)
 
 check:
