--- a/src/PyScriptEC/PyScriptEncConverter 2010.vcxproj
+++ b/src/PyScriptEC/PyScriptEncConverter 2010.vcxproj
@@ -60,6 +60,7 @@
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
+      <PreprocessorDefinitions>_WINDLL;%(PreprocessorDefinitions);VERBOSE_DEBUGGING</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <AdditionalDependencies>python27.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -67,6 +68,9 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(SolutionDir)lib\windows\python*.dll $(SolutionDir)output\$(Configuration)</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -85,6 +89,9 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(SolutionDir)lib\windows\python*.dll $(SolutionDir)output\$(Configuration)</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="PyScriptEncConverter.cpp" />
