--- a/src/CcEC/CcEC 2010.csproj
+++ b/src/CcEC/CcEC 2010.csproj
@@ -95,23 +95,21 @@
     <Compile Include="CcEncConverter.cs" />
     <Compile Include="CcEncConverterConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="CcAutoConfigDialog.resx">
       <DependentUpon>CcAutoConfigDialog.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Resources.resx" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ECInterfaces\ECInterfaces.csproj">
+    <ProjectReference Include="..\ECInterfaces\ECInterfaces 2010.csproj">
       <Project>{2935E02F-43ED-4670-9A00-A91B0AD3D66C}</Project>
-      <Name>ECInterfaces</Name>
+      <Name>ECInterfaces 2010</Name>
       <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\EncCnvtrs\EncCnvtrs.csproj">
+    <ProjectReference Include="..\EncCnvtrs\EncCnvtrs 2010.csproj">
       <Project>{3E4B908A-4F96-43C5-981B-1AA4B73CCC26}</Project>
-      <Name>EncCnvtrs</Name>
+      <Name>EncCnvtrs 2010</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
