--- a/src/PerlExpressionEC/PerlExpressionEC 2010.csproj
+++ b/src/PerlExpressionEC/PerlExpressionEC 2010.csproj
@@ -38,7 +38,7 @@
     <OutputPath>..\..\output\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <RegisterForComInterop>true</RegisterForComInterop>
+    <RegisterForComInterop>false</RegisterForComInterop>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <CodeAnalysisLogFile>..\..\output\debug\PerlExpressionEC.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
@@ -90,19 +90,27 @@
     <Compile Include="PerlExpressionEncConverter.cs" />
     <Compile Include="PerlExpressionEncConverterConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Resources.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="PerlExpressionAutoConfigDialog.resx">
+      <DependentUpon>PerlExpressionAutoConfigDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources.resx" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ECInterfaces\ECInterfaces.csproj">
+    <ProjectReference Include="..\ECInterfaces\ECInterfaces 2010.csproj">
       <Project>{2935E02F-43ED-4670-9A00-A91B0AD3D66C}</Project>
-      <Name>ECInterfaces</Name>
+      <Name>ECInterfaces 2010</Name>
     </ProjectReference>
-    <ProjectReference Include="..\EncCnvtrs\EncCnvtrs.csproj">
+    <ProjectReference Include="..\EncCnvtrs\EncCnvtrs 2010.csproj">
       <Project>{3E4B908A-4F96-43C5-981B-1AA4B73CCC26}</Project>
-      <Name>EncCnvtrs</Name>
+      <Name>EncCnvtrs 2010</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -121,6 +129,13 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
